figured out that the SCROLLBARS component comes with a wrapper(the one with the inset) that causes the bug.

--- a/src/components/EditorView/Lexical/theme.css
+++ b/src/components/EditorView/Lexical/theme.css
@@ -20,3 +20,8 @@
     margin: 0 0 15px 0;
     position: relative;
 }
+
+.SCROLLBAR_WRAPPER > * {
+    /*display: none;*/
+    overflow-x: hidden !important;
+}
